# gateway

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  deny.toml
.github/workflows/: ci.yml  docker.yml  release.yml
conf/: gateway.yaml
control-plane/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  go.sum
control-plane/api/: openapi.yaml
control-plane/cmd/control-plane/: main.go
control-plane/internal/config/: config.go
control-plane/internal/gateway/: gateway.go  http.go  mock.go
control-plane/internal/httpapi/: admin.go  auth.go  data.go  server.go  server_test.go  throttle.go
control-plane/internal/integration/: backend_test.go  gateway_tenant_e2e_test.go
control-plane/internal/kv/: session.go
control-plane/internal/store/postgres/: store.go
control-plane/internal/store/postgres/migrations/: 002_password_epoch.sql
control-plane/internal/user/: user.go
control-plane/internal/user/memory/: store.go  store_test.go
control-plane/internal/user/postgres/: store.go
control-plane/internal/user/postgres/migrations/: 001_users.sql
control-plane/web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
control-plane/web/e2e/: control-plane.spec.ts
control-plane/web/src/: App.test.tsx  App.tsx  api.ts  format.ts  hooks.ts  styles.css  test-setup.ts  types.ts
control-plane/web/src/components/: UI.tsx
control-plane/web/src/pages/: AuditPage.tsx  AvailabilityPage.tsx  ConfigPage.tsx  KeysPage.tsx  LoginPage.tsx  OverviewPage.tsx  UsagePage.tsx  UsersPage.tsx
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/consts/: Cargo.toml
crates/consts/src/: error_code.rs  lib.rs  protocol.rs
crates/dag/: Cargo.toml
crates/dag/src/: context.rs  executor.rs  nodes.rs
crates/engines/: Cargo.toml
crates/engines/src/: base.rs  bespoke.rs  claude_engine.rs  echo.rs  engine.rs  factory.rs  families.rs  http_transport.rs  lib.rs  openai_engine.rs  pump.rs  realtime.rs  sse.rs  transport.rs  usage_extract.rs
crates/engines/tests/: golden_fixtures.rs  http_transport_wire.rs  request_construction.rs
crates/handler/: Cargo.toml
crates/handler/src/: lib.rs  moderation.rs  offline.rs  plugins.rs
crates/models/: Cargo.toml
crates/models/src/: block.rs  cost.rs  error.rs  lib.rs  params.rs  request.rs  response.rs  token_estimate.rs  usage.rs
crates/protocol/src/: anthropic.rs  dsl.rs  lib.rs  openai.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/server/tests/: bench.rs  compat.rs  e2e.rs  live_path.rs
crates/server/tests/common/: mod.rs
crates/state/: Cargo.toml
crates/state/src/: admission.rs  alerts.rs  avail.rs  configstore.rs  content.rs  governance.rs  health.rs  keystore.rs  lib.rs  store.rs
crates/task/: Cargo.toml
crates/task/src/: lib.rs
crates/views/: Cargo.toml
crates/views/src/: lib.rs
deploy/: nginx.conf
docs/: api.md  architecture.md  configuration.md  deployment.md  development.md  examples.md  governance.md  multi-instance.md  observability.md  providers.md
