# Gateway — LLM access point. Workspace manifest.
[workspace]
resolver = "3"
members = [
    "crates/consts",
    "crates/models",
    "crates/protocol",
    "crates/config",
    "crates/state",
    "crates/engines",
    "crates/dag",
    "crates/handler",
    "crates/task",
    "crates/views",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/cocoonstack/gateway"
rust-version = "1.88"
publish = false

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
undocumented_unsafe_blocks = "deny"

[workspace.dependencies]
# --- async runtime ---
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
# --- web (server) ---
axum = { version = "0.8", features = ["ws"] } # ws: the /v1/realtime session surface
tower = "0.5"
# realtime upstream bridging (client side of /v1/realtime)
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
# OPTIONAL, behind engines' `http` feature; default builds have zero egress.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
# --- serde ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.29" # serde_yaml is unmaintained (archived 2024)
# --- errors ---
thiserror = "2"
anyhow = "1"
# --- local stdout logging only (no exporters, no reporting) ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# --- misc ---
bytes = "1"
dashmap = "6"
arc-swap = "1" # lock-free live-config swap (M7 dynamic config)
moka = { version = "0.12", features = ["sync"] }
governor = "0.10"
redis = { version = "1", default-features = false, features = ["tokio-comp", "connection-manager", "script"] }
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
tempfile = "3"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false }
chrono = { version = "0.4", features = ["serde"] }

# --- internal crates (path deps) ---
gw-consts = { path = "crates/consts" }
gw-models = { path = "crates/models" }
gw-protocol = { path = "crates/protocol" }
gw-config = { path = "crates/config" }
gw-state = { path = "crates/state" }
gw-engines = { path = "crates/engines" }
gw-dag = { path = "crates/dag" }
gw-handler = { path = "crates/handler" }
gw-task = { path = "crates/task" }
gw-views = { path = "crates/views" }
base64 = "0.22"
tiktoken-rs = "0.12"
# pure-compute crypto (SigV4 signing, cache keys, content-at-rest AEAD) — no network capability
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chacha20poly1305 = "0.10"
regex = "1"

# Faster iterative builds; keep release optimized.
[profile.dev]
opt-level = 0
debug = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
