[package]
name = "gw-dag"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Layered DAG execution: 4 fixed layers, topo-ordered nodes."

[dependencies]
gw-consts = { workspace = true }
gw-models = { workspace = true }
gw-config = { workspace = true }
gw-state = { workspace = true }
gw-engines = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
