[package]
name = "gw-engines"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Model engines: ModelEngine trait + factory + implementations."

[dependencies]
gw-consts = { workspace = true }
gw-models = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
# real-socket wire test for HttpTransport (loopback only, never egress)
axum = { workspace = true }

[lints]
workspace = true
