[package]
name = "gw-handler"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Business orchestration: build DagContext, run the layered DAG."

[dependencies]
gw-consts = { workspace = true }
gw-models = { workspace = true }
gw-config = { workspace = true }
gw-state = { workspace = true }
tracing = { workspace = true }
gw-engines = { workspace = true }
gw-dag = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
