[package]
name = "gw-models"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Core domain models: GatewayRequest/GatewayResponse/CommonUsage + error model."

[dependencies]
gw-consts = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tiktoken-rs = { workspace = true }

[lints]
workspace = true
