[package]
name = "gw-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "HTTP entrypoint: config + state + mock transport + axum router."

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
gw-config = { workspace = true }
gw-state = { workspace = true }
gw-engines = { workspace = true }
gw-views = { workspace = true }
gw-task = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
metrics-exporter-prometheus = { workspace = true }
tower = { workspace = true }
serde_json = { workspace = true }
gw-protocol = { workspace = true }
# ws e2e: loopback connection, zero egress
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

[package.metadata.dist]
dist = true

[lints]
workspace = true
