[package]
name = "gw-state"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "In-process gateway state: auth, rate limit, quota, account pool, billing ledger — no external storage."

[dependencies]
gw-consts = { workspace = true }
gw-models = { workspace = true }
gw-config = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
moka = { workspace = true }
governor = { workspace = true }
redis = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
chacha20poly1305 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
