[package]
name = "gw-views"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "HTTP view layer: OpenAI/Anthropic-compatible routes on axum."

[dependencies]
gw-consts = { workspace = true }
gw-models = { workspace = true }
gw-protocol = { workspace = true }
gw-config = { workspace = true }
gw-state = { workspace = true }
gw-engines = { workspace = true }
gw-handler = { workspace = true }
gw-dag = { workspace = true }
axum = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }

[lints]
workspace = true
